# wex-faust-poc

./: ReadME.md  docker-compose.yml  pyproject.toml
deserializing_avro_schema/: Dockerfile  Dockerfile.alt  local_entrypoint.sh  main.py  save_schema_to_karapace.py  service_main.py
simple_example/: main.py
